# Necromancer

./: .gitignore
src/libs/game/: CMakeLists.txt  game.cpp  game.hpp
src/libs/game/builders/: CMakeLists.txt
src/libs/game/builders/builderLevel/: CMakeLists.txt  builderLevel.cpp  builderLevel.hpp
src/libs/game/builders/builderLevelMap/: CMakeLists.txt  builderLevelMap.cpp  builderLevelMap.hpp
src/libs/game/builders/iBuilder/: iBuilder.hpp
src/libs/game/cellElements/: CMakeLists.txt
src/libs/game/cellElements/cellElement/: CMakeLists.txt  cellElement.cpp  cellElement.hpp
src/libs/game/cellElements/entitys/: CMakeLists.txt
src/libs/game/cells/: CMakeLists.txt
src/libs/game/cells/avallableCells/: CMakeLists.txt  paths.hpp
src/libs/game/cells/cell/: CMakeLists.txt  cell.cpp  cell.hpp
src/libs/game/cells/wallCell/: wallCell.cpp  wallCell.hpp
src/libs/game/commonI/: CMakeLists.txt
src/libs/game/commonI/iAttacker/: iAttacker.hpp
src/libs/game/commonI/iUsingEssence/: iUsingEssence.hpp
src/libs/game/commonI/iUsingHealth/: CMakeLists.txt  iUsingHealth.hpp
src/libs/game/factorys/: CMakeLists.txt
src/libs/game/factorys/factoryCell/: CMakeLists.txt  factoryCell.cpp  factoryCell.hpp
src/libs/game/level/: CMakeLists.txt  level.cpp  level.hpp
src/libs/game/level/cells/: CMakeLists.txt  paths.hpp
src/libs/game/level/groups/: CMakeLists.txt
src/libs/game/level/levelMap/: CMakeLists.txt  levelMap.cpp  levelMap.hpp
src/libs/game/loaders/: CMakeLists.txt
src/libs/game/loaders/iLoader/: iLoader.hpp
src/libs/game/loaders/levelLoader/: CMakeLists.txt  levelLoader.cpp  levelLoader.hpp
src/libs/game/loaders/mapLoader/: CMakeLists.txt  mapLoader.cpp  mapLoader.hpp
src/libs/game/managers/: CMakeLists.txt
src/libs/game/managers/iManager/: iManager.hpp
src/libs/game/managers/iManagerCells/: iManagerCells.hpp
src/libs/game/managers/managerAllCells/: CMakeLists.txt  managerAllCells.cpp  (+1 more)
(+62 files in other folders)
